@@ -13,6 +13,7 @@
       + static method getc : int ($stream : Sys::IO::FileStream);
       + static method flock : int ($fd : int, $operation : int);
       + static method print : int ($stream : Sys::IO::FileStream, $string : string);
+      + static method printf : int ($stream, $format : string, $args : object[]);
       
 0.486 2023-09-06
   [Bug Fix]
